@@ -5,7 +5,9 @@ Changelog for Poi
 1.2.12 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Do not fail when rendering a response that has a text/x-html-safe
+  mimetype or where the html transform returns nothing.
+  [maurits]
 
 
 1.2.11 (2010-10-14)
